<resources>
    <string name="app_name">Cs SDK</string>
    <string name="user_type_selector_prompt">User type:</string>
    <string name="select_user_button_text">Enter</string>
    <string name="start_chat_session_text">Start Chat</string>
    <string name="quit_chat_session_text">End chat</string>
    <string name="submit_chat_entry_text">Submit</string>
    <string name="chat_set_up_message">Please wait while we connect you to one of our customer mangers…</string>
    <string name="chat_session_end_prompt">Quit chat?</string>
    <string name="error_message">Error occurred!! Please retry.</string>
    <string name="chat_session_start_prompt">Start chat session?</string>
    <string name="chat_session_terminated_message">Chat session terminated!!</string>
    <string name="chat_entry_post_failure_message">Chat entry posting failed</string>
    <string name="cm_name_text">Customer Manager: %1$s</string>
    <string name="cm_session_online_prompt">Go on-line</string>
    <string name="cm_session_online_status">You are on-line</string>
    <string name="cm_session_off_line_prompt">Go off-line</string>
    <string name="cm_session_off_line_status">You are off-line</string>
    <string name="standby_message">Please standby for user chat request…</string>
    <string name="user_name_text">User: %1$s</string>
    <string name="session_set_up_failure_message">Session set-up failure</string>
    <string name="chat_session_set_up_failure_message">Chat session set-up failed.</string>
    <string name="session_termination_message">Session termination failure</string>
    <string name="quit_chat_session_prompt">Quit chat?</string>
    <string name="session_start_message">Session started.</string>
    <string name="session_terminated_message">Session terminated</string>
    <string name="chat_session_set_up_success_message">New chat session created.</string>
    <string name="chat_session_termination_message">Chat session terminated</string>
    <string name="new_chat_request_prompt">New chat request…</string>
    <string name="accept_chat_request_text">Accept</string>
    <string name="decline_chat_request_text">Decline</string>
    <string name="decline_chat_request_prompt">Decline chat request?</string>
    <string name="accept_chat_request_prompt">Accept chat request?</string>
    <string name="cm_welcome_message">Hello, Sir. How may i help you?</string>
    <string name="cm_session_start_failure_message">Cm Session start failure.</string>
    <string name="cm_session_start_message">Cm Session started.</string>
    <string name="chat_session_id">Chat session id</string>
    <string name="chat_date_text">Chat Time</string>
    <string name="no_message_found">No message found!!</string>
    <string name="chat_history_menu_item">Chat history</string>
    <string name="launch_chat_history_prompt">Load chat history view?</string>

    <string-array name="user_type">
        <item>Customer Manager</item>
        <item>Customer</item>
    </string-array>
    <string name="default_cm_id">test_cm1@client2.com</string>
    <string name="default_cm_pass">1234</string>
    <string name="default_user_id">test_cus1@client2.com</string>
    <string name="default_user_pass">1234</string>
</resources>
