<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/cm_session_online_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/snow_white3"
            android:checked="false"
            android:minHeight="40dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/cm_session_off_line_status"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/cm_session_offline_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/snow_white3"
            android:checked="false"
            android:minHeight="40dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/cm_session_online_status"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/cm_session_online_switch" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/standby_message_window"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/snow_white2"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/standby_message_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/standby_message"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/standby_message_window_progress_bar"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
                android:indeterminateOnly="true"
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:layout_gravity="center"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/chat_param_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cm_session_offline_switch">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:gravity="start|center_vertical"
                android:minHeight="40dp"
                android:textAlignment="gravity"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/quit_chat_session"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="User: xxxxxx xxxxxx" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/quit_chat_session"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:text="@string/quit_chat_session_text"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/chat_session_data_holder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/chat_input_holder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chat_param_holder"
            android:background="@color/snow_white2">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/chat_entry_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/chat_input_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/submit_chat_entry_button"
                android:id="@+id/chat_input_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:background="@color/snow_white2"
                android:layout_margin="4dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit_chat_entry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/submit_chat_entry_text"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/wait_window"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/wait_window_progress_bar"
                style="@android:style/Widget.DeviceDefault.ProgressBar.Small"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/new_chat_request_dialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            android:background="@android:color/holo_green_light">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="160dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/new_chat_request_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="4dp"
                    android:text="@string/new_chat_request_prompt"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/accept_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:paddingStart="16dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="4dp"
                    android:text="@string/accept_chat_request_text"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/decline_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:paddingStart="16dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="4dp"
                    android:text="@string/decline_chat_request_text"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>