<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_chat_session"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/start_chat_session_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/quit_chat_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/quit_chat_session_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"  />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cm_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:paddingStart="4dp"
            android:gravity="start|center_vertical"
            android:textAlignment="gravity"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quit_chat_session"
            tools:text="Cm: xxxxxx xxxxxx"
            android:background="@color/snow_white3"
            android:paddingLeft="4dp" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/chat_session_data_holder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/chat_input_holder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cm_name_text"
            android:background="@color/snow_white2">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/chat_entry_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/chat_input_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/chat_input_edit_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/submit_chat_entry_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:background="@color/snow_white2"
                android:layout_margin="4dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit_chat_entry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/submit_chat_entry_text"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/wait_window"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/chat_set_up_wait_window_progress_bar"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
                android:indeterminateOnly="true"
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:layout_gravity="center"/>
        </LinearLayout>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/chat_set_up_window"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:text="@string/chat_set_up_message"
                android:padding="4dp"/>

            <ProgressBar
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
                android:indeterminateOnly="true"
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:layout_gravity="center"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/quit_chat_session_during_set_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/quit_chat_session_text"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>